Cripto/force-app/main/default/objects/Transacao__c/Transacao__c.object-meta.xml
<CustomObject>
    <label>Transação</label>
    <nameField>
        <displayFormat>TR-{00000}</displayFormat>
        <label>Id da Transação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transações</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>