Cripto/force-app/main/default/objects/Transacao__c/fields/AtivoDaCarteira__c.field-meta.xml
<CustomField>
    <fullName>AtivoDaCarteira__c</fullName>
    <label>Ativo da carteira</label>
    <referenceTo>AtivoDaCarteira__c</referenceTo>
    <relationshipLabel>Transações</relationshipLabel>
    <relationshipName>Transacoes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>