Cripto/force-app/main/default/objects/Transacao__c/fields/Carteira__c.field-meta.xml
<CustomField>
    <fullName>Carteira__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carteira</label>
    <referenceTo>Carteira__c</referenceTo>
    <relationshipLabel>Transações</relationshipLabel>
    <relationshipName>TransacoesCarteira</relationshipName>
    <type>Lookup</type>
</CustomField>