Cripto/force-app/main/default/objects/Transacao__c/validationRules/Nao_pode_zerar_ativo.validationRule-meta.xml
<ValidationRule>
    <fullName>Nao_pode_zerar_ativo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Quantidade__c &lt; 0,  (Quantidade__c + AtivoDaCarteira__r.TotalTranscoes__c) &lt; 0)</errorConditionFormula>
    <errorDisplayField>AtivoDaCarteira__c</errorDisplayField>
    <errorMessage>O ativo não pode ficar abaixo de zero,</errorMessage>
</ValidationRule>